--- a/src/app/HOME/navbar/navbar.component.scss
+++ b/src/app/HOME/navbar/navbar.component.scss
@@ -1,4 +1,4 @@
-@import '../../styles/theme-mixins';
+@import '../../shared/styles/theme-mixins';
 
 .navbar {
   @include themed-color(background-color, surface);
