--- a/src/app/HOME/navbar/navbar.component.html
+++ b/src/app/HOME/navbar/navbar.component.html
@@ -5,7 +5,15 @@
     </div>
     
     <div class="navbar-content">
-        <div></div>      
+        <div class="navbar-nav">
+          <button 
+            class="new-project-btn"
+            (click)="onNewProject()"
+            type="button">
+            <span class="new-project-icon">➕</span>
+            <span>{{ 'navbar.new.project' | translate }}</span>
+          </button>
+        </div>      
       <div class="navbar-actions">
         <app-language-selector></app-language-selector>
         <app-theme-toggle></app-theme-toggle>
