--- a/src/app/shared/components/theme-toggle/theme-toggle.component.scss
+++ b/src/app/shared/components/theme-toggle/theme-toggle.component.scss
@@ -1,4 +1,4 @@
-@import '../../styles/theme-mixins';
+@use '../../styles/modern-theme-mixins' as *;
 
 .theme-toggle-container {
   position: relative;
