--- a/src/app/HOME/navbar/navbar.component.scss
+++ b/src/app/HOME/navbar/navbar.component.scss
@@ -54,18 +54,15 @@
 }
 
 .navbar-content {
-  @include flex-between();
-  
-  & {
-    align-items: center;
-    flex: 1;
-    margin-left: var(--spacing-xl);
-  }
+  display: flex;
+  align-items: center;
+  gap: var(--spacing-md);
+  margin-left: auto;
   
   @include mobile {
     width: 100%;
     margin-left: 0;
-    justify-content: space-between;
+    justify-content: flex-end;
   }
 }
 
