--- a/src/app/HOME/navbar/settings-dropdown/settings-dropdown.component.scss
+++ b/src/app/HOME/navbar/settings-dropdown/settings-dropdown.component.scss
@@ -1,4 +1,4 @@
-@use '../../styles/modern-theme-mixins' as *;
+@use '../../../shared/styles/modern-theme-mixins' as *;
 
 .settings-dropdown {
   position: relative;
