--- a/src/app/HOME/posts-list/posts-list.component.html
+++ b/src/app/HOME/posts-list/posts-list.component.html
@@ -50,7 +50,17 @@
       @for (post of posts(); track post.id) {
         <div class="post-card">
           <div class="post-header">
-            <h3 class="post-title">{{ post.title }}</h3>
+            <div class="post-header-left">
+              <div class="author-info">
+                <div class="author-photo">
+                  <span class="author-initial">{{ post.authorName.charAt(0).toUpperCase() }}</span>
+                </div>
+                <div class="author-details">
+                  <h3 class="post-title">{{ post.title }}</h3>
+                  <span class="author-name">{{ post.authorName }}</span>
+                </div>
+              </div>
+            </div>
             <span class="post-scope">{{ post.scope | titlecase }}</span>
           </div>
           
@@ -68,10 +78,6 @@
           }
           
           <div class="post-footer">
-            <div class="post-author">
-              <span class="author-label">By:</span>
-              <span class="author-name">{{ post.authorName }}</span>
-            </div>
             <span class="post-date">{{ formatDate(post.createdAt) }}</span>
           </div>
         </div>
